--- a/package.json
+++ b/package.json
@@ -16,19 +16,18 @@
     "@adminjs/express": "^6.1.1",
     "@adminjs/mongoose": "^4.1.0",
     "@adminjs/themes": "^1.0.1",
-    "add": "^2.0.6",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
-    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "streamifier": "^0.1.1"
   },
+  "engines": { "node": "20.x" },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
