--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "serverless-http": "^3.2.0",
     "streamifier": "^0.1.1"
   },
-  "engines": { "node": "20.x" },
+  "engines": {
+    "node": "20.x"
+  },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
