--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node seeder.js"
+    "start": "node server.js",               
+    "dev": "nodemon server.js",           
+    "vercel": "vercel dev",                 
+    "seed": "node seeder.js"              
   },
   "keywords": [],
   "author": "",
@@ -27,10 +28,11 @@
     "serverless-http": "^3.2.0",
     "streamifier": "^0.1.1"
   },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "rollup": "^4.46.3"
+  },
   "engines": {
     "node": "20.x"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
