--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
     "serverless-http": "^3.2.0",
-    "streamifier": "^0.1.1"
-  },
-  "devDependencies": {
+    "streamifier": "^0.1.1",
     "nodemon": "^3.1.10",
     "rollup": "^4.46.3"
   },
-  "engines": { "node": "20.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
