--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
-    "serverless-http": "^3.2.0",
-    "streamifier": "^0.1.1",
     "nodemon": "^3.1.10",
-    "rollup": "^4.46.3"
+    "rollup": "^4.46.3",
+    "serverless-http": "^3.2.0",
+    "streamifier": "^0.1.1"
   },
-  "engines": {
-    "node": "20.x"
+ "engines": {
+    "node": ">=20.x"
+  },
+  "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.46.3"
   }
 }
