Move rollup package to optionalDependencies
Shifted @rollup/rollup-linux-x64-gnu from devDependencies to optionalDependencies in package.json and package-lock.json. This change ensures the package is installed only when supported, improving compatibility across environments.

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "serverless-http": "^3.2.0",
     "streamifier": "^0.1.1"
   },
- "engines": {
-    "node": ">=20.x"
-  },
-  "devDependencies": {
+  "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.46.3"
+  },
+   "engines": {
+    "node": ">=20.x"
   }
 }
