Add express-session options to fix deprecation warnings
Added 'resave: false' and 'saveUninitialized: false' to the AdminJS Express session configuration in admin.js to address deprecation warnings. Also updated package.json to remove unused dependencies.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "description": "",
   "dependencies": {
     "@adminjs/express": "^6.1.1",
-    "@adminjs/mongoose": "^4.1.0",
-    "@adminjs/themes": "^1.0.1",
+    "@adminjs/mongoose": "^4.1.0", 
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
@@ -26,12 +25,14 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "rollup": "^4.46.3",
     "serverless-http": "^3.2.0",
-    "streamifier": "^0.1.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.46.3"
+    "streamifier": "^0.1.1"
   },
-  "optionalDependencies": {},
+  "overrides": {
+    "@adminjs/themes": {
+      "rollup": "npm:@rollup/wasm-node@^4.46.3"
+    }
+  },
   "engines": {
     "node": ">=20.x"
   }
